# cpp-template

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.py
src/: cpp-template.cpp  cpp-template.h  main.cpp
test_package/: conanbuild.sh  conanbuildenv-release-x86_64.sh  conanfile.py  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  deactivate_conanrunenv-release-x86_64.sh
